// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlaylistSet renders PlaylistSet component 1`] = `
Object {
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "logTestingPlaygroundURL": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
}
`;

exports[`PlaylistSet renders PlaylistSet component 2`] = `
<button
  style="font-size: 20px; height: 70%; width: 35%;"
>
  New Playlist
</button>
`;

exports[`PlaylistSet renders PlaylistSet component 3`] = `
<button
  class="confirm-button"
>
  Confirm
</button>
`;

exports[`PlaylistSet renders PlaylistSet component 4`] = `
<div
  class="scroll-list-container"
  data-testid="scrollList"
>
  <div
    class="scroll-list"
  >
    <div
      class="playlist-wrapper"
    >
      <div
        class="playlist-wrapper"
      >
        <div
          class="delete-button-area"
        />
        <div
          class="playlist-info"
        >
          <div
            class="name"
          >
            Playlist 1
          </div>
          <div
            class="songs-count"
          >
            0
            ㆍSongs
          </div>
        </div>
        <div
          class="playlist-enter"
        >
          <img
            alt="playlistEnter"
            src="plEnter.png"
          />
        </div>
      </div>
    </div>
    <div
      class="playlist-wrapper"
    >
      <div
        class="playlist-wrapper"
      >
        <div
          class="delete-button-area"
        />
        <div
          class="playlist-info"
        >
          <div
            class="name"
          >
            Playlist 2
          </div>
          <div
            class="songs-count"
          >
            0
            ㆍSongs
          </div>
        </div>
        <div
          class="playlist-enter"
        >
          <img
            alt="playlistEnter"
            src="plEnter.png"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PlaylistSet renders PlaylistSet component 5`] = `
<button
  style="font-size: 20px; height: 70%; width: 35%;"
>
  Delete Playlist
</button>
`;
